--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1"
+    "multer-s3": "^3.0.1",
+    "nodemailer": "^6.10.0",
+    "otp-generator": "^4.0.1",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "prisma": "^6.3.0"
